# sdl3-starter-template

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  compile_flags.txt  install-deps.sh  vcpkg.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
sdlCmakeConfig/: sdl2-config.cmake
src/: main.cpp  window.cpp  window.hpp
